método indexDesactivados() en ESTADO-PEDIDO. Sin testear en documentación. EstadoPedidoResource creado exitosamente. Se agregaron los métodos correspondientes en la documentación.
